--- a/arch/arm64/configs/lineageos_axon7_defconfig
+++ b/arch/arm64/configs/lineageos_axon7_defconfig
@@ -730,3 +730,7 @@ CONFIG_SCHED_TUNE=y
 CONFIG_CPU_FREQ_GOV_SCHED=y
 CONFIG_CGROUP_SCHEDTUNE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+
+
+# KCAL
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
